sesでのメール送信テスト

--- a/.env.example
+++ b/.env.example
@@ -51,11 +51,17 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=log
+#MAIL_MAILER=ses
 MAIL_SCHEME=null
 MAIL_HOST=127.0.0.1
 MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
+MAIL_DRIVER=ses
+#AWS_SES_ACCESS_KEY_ID=xxxxxxxxxxxxxxxxxxxxxxxxxx
+#AWS_SES_SECRET_ACCESS_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxx
+#AWS_SES_DEFAULT_REGION=us-west-2（オレゴン）
+#MAIL_FROM_ADDRESS="noreply@example.com"
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
